--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* color: rgb(var(--foreground-rgb)); */
+  background: url("/images/assets/home/background-home-desktop.jpg");
+  background-size: cover;
+  background-position: center center;
 }
