--- a/styles/styles.module.css
+++ b/styles/styles.module.css
@@ -1,3 +1,13 @@
+.circleContainer {
+  width: 280px;
+  height: 280px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+
 .beforeBorder {
   color: white;
   display: flex;
@@ -5,6 +15,7 @@
   height: 100%;
   gap: 1rem;
 
+  letter-spacing: 2px;
   position: relative;
 }
 
@@ -31,6 +42,7 @@
   align-items: center;
   height: 100%;
   gap: 1rem;
+  letter-spacing: 2px;
   position: relative;
   /* border-bottom: 5px solid white; */
 }
